** [0.0.4] - 2020-03-08
*** Added
- Add basic socket to pop3client Class
- Add basic resolver to pop3client Class
- Add read and write methods to pop3client Class
- Add GnuTLS support to pop3client Class (Setup, read/write methods)
- Add utils files for support classes
- Add write_to_file method to utils class, to enable mails to be written as .eml files
- Add documentation TeX structure & references File
- Include spdlog Library
- Add basic spdlog file sink
- Add basic error handling to establish_connection function
- Add split functions to utils.cpp
- Add delete_message function to pop3client class
- Add get_total_messages function to pop3client class
- Add retrieve_messages function to pop3client class
- Add login function to pop3client class
- Include tablulate Library in util.h
- Add quit funtion to pop3client class (gracefully ends sessions)
- Add ends_with funtion to utils 
- Add read_to_end function to pop3client class (reads messages larger than 8000 chars) 
*** Changed
- Split temp function into establish_connection & debug functions
- Fixed output in pop3client_utils::print_messages
- Cleaned up save_mail funtion (now saves complete emails as .eml files with the emails subject as file name)
- Include CLI11 Library in main.cpp
- Add simple CLA handling
- Include JSON Library in main.cpp
- Add simple json parsing to read config file
*** Removed
- Remove subprocess attempt
- Remove backup folder, as it no longer holds any importance
** [0.0.3] - 2020-03-01
*** Added
- Add Time Tracking Badge to README
*** Changed
- Moved asio approach to backup folder
- Made multiple attempts to work with subprocesses, to no proceeds
** [0.0.2] - 2020-02-22
*** Changed
- Rewrote Socket to feature a resolver
- Made basic changes to prepare TLS sockets
** [0.0.1] - 2020-02-15
*** Added
- Include ASIO Library in main.cpp
- Fill .gitignore
- Add simple interfacing with local POP3 server to main.cpp
- Create RESEARCH.md to temporarily document sources
- Create empty doc file